RDFORMS-78 #close alignment with remove buttons fixed

--- a/src/view/bmd/style.css
+++ b/src/view/bmd/style.css
@@ -80,7 +80,7 @@
   cursor: pointer;
 }
 
-.rdformsEditor .rdformsFieldControl {
+.rdformsEditor .rdformsFieldControl:not(.rdformsLangFieldControl) {
   width: auto !important;
 }
 
@@ -123,6 +123,7 @@
 .rdformsLangFieldControl .fa-times{
   position: absolute;
   right: 0;
+  top: 1.1em;
 }
 
 
